--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
 
     <uses-feature android:name="android.hardware.camera" android:required="false" />
 
@@ -23,7 +24,6 @@
         android:theme="@style/Theme.MrRise"
         tools:targetApi="31">
 
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -33,18 +33,17 @@
             </intent-filter>
         </activity>
 
-
-
         <activity
             android:name=".AddAlarmActivity"
             android:exported="false" />
 
         <activity
             android:name=".ui.puzzle.AlarmRingingActivity"
-            android:exported="false"
+            android:exported="true"
             android:showOnLockScreen="true"
-            android:turnScreenOn="true" />
-
+            android:turnScreenOn="true"
+            android:excludeFromRecents="true"
+            android:launchMode="singleTask" />
 
         <receiver
             android:name=".utils.AlarmReceiver"
